--- a/Board/src/main/webapp/css/style.css
+++ b/Board/src/main/webapp/css/style.css
@@ -1,1 +1,86 @@
 /* Variables */
+body {
+  box-sizing: border-box;
+  font-size: 100%;
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.content__title {
+  text-align: center;
+  padding: 1rem;
+}
+
+.form {
+  display: grid;
+  grid-gap: 0.875rem;
+
+  /* gap: 0.875rem; */
+}
+
+.form .login {
+  color: #eee;
+}
+
+.login .form__field {
+  display: flex;
+}
+
+/* label, input[text], input[password], input[submit] */
+.login label,
+.login input[type="text"],
+.login input[type="password"],
+.login input[type="submit"] {
+  border-radius: 0.25rem;
+  padding: 1rem;
+}
+
+/* label */
+.login label {
+  background-color: #363b41;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+/* input[text], input[password] */
+.login input[type="text"],
+.login input[type="password"] {
+  background-color: #3b4148;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  inline-size: 100%;
+}
+
+/* input[submit] */
+.login input[type="submit"] {
+  background-color: #ea4c88;
+  color: #eee;
+  font-weight: 700;
+  text-transform: uppercase;
+  inline-size: 100%;
+  cursor: pointer;
+}
+
+.login input[type="submit"]:focus,
+.login input[type="submit"]:hover {
+  background-color: #d44179;
+}
+
+.icons {
+  display: inline-block;
+  vertical-align: middle;
+  inline-size: 1em;
+}
+
+input {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  background-image: none;
+  color: #eee;
+}
